# Pattern_Recog_Project

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: check-requirements.yml
notebooks/: model_prototype.ipynb  train.ipynb  train_fix (1).ipynb  train_fix.ipynb
src/data/: build_features.py  dataset.py  make_data.py  preprocess_annotations.py
src/models/: decoder.py  encoder.py  encoder_vit.py  encoder_vmamba.py  predict.py  train.py
tests/: test_decoder.py  test_encoder.py  test_encoder_vit.py  test_encoder_vmamba.py
