[project]
name = "image-captioning-with-vmamba"
version = "0.1.0"
packages = []  
description = ""
authors = [
    {name = "RATSAPORN",email = "rodolf8680@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "image_captioning_with_vmamba", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Add a fake package to pyproject.toml without running poetry lock
[tool.poetry.dependencies]
fake-package-that-does-not-exist = "^1.0.0"