[project]
name = "image-captioning-with-vmamba"
version = "0.1.0"
packages = []  
description = ""
authors = [
    {name = "RATSAPORN",email = "rodolf8680@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14.1 || >3.14.1,<3.15"
dependencies = [
    "torch>=2.0.0",
    "timm>=0.9.0",
    "torchvision (>=0.26.0,<0.27.0)",
    "pycocoevalcap>=1.2",
]

# mamba-ssm requires Linux + NVIDIA GPU + CUDA — install manually on compatible hardware:
#   pip install mamba-ssm --no-build-isolation
[project.optional-dependencies]
mamba = ["mamba-ssm>=2.0.0"]

[tool.poetry]
packages = [{include = "models", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
